2006-01-20 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCicode.c (geniCodeAdd, geniCodeArray): use char for array
	offset if possible
	* src/SDCCast.c (getLeftResultType): 255 fits in char, not 256

2006-01-18 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (backPatchLabels): fixed bug #1408066: made it
	inifinitely recurseable, added static	
	* support/regression/tests/bug-1408066.c: added

2006-01-17 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCicode.h,
	* src/SDCCicode.c (newiTempPreheaderLabel, newiTempLoopHeaderLabel):
	renamed, added possibility to create "postLoopLbl"-labels
	* src/SDCCBBlock.c (iCodeBreakDown): renamed newiTempPreheaderLabel to
	newiTempLoopHeaderLabel
	* src/SDCCloop.c (newInduction, newRegion, backEdges, insertIntoLoop,
	isNotInBlocks, addToExitsMarkDepth, createLoop, dominatedBy,
	addDefInExprs, assignmentsToSym, isOperandInvariant, pointerAssigned,
	hasNonPtrUse, loopInvariants, addressTaken, findInduction,
	findDefInRegion, mergeRegions, ifMerged, mergeInnerLoops): made static,
	(pinduction, pregion, hasIncomingDefs, findLoopEndSeq): disabled,
	(basicInduction): fixed bug #136564, made static,
	(loopInduction): changed parameter of basicInduction, made static,
	(addPostLoopBlock): added
	* src/SDCCloop.h: removed backEdges, pregion, pinduction,
	loopOptimizations, addressTaken, findDefInRegion, hasIncomingDefs,
	findLoopEndSeq
	* support/regression/tests/bug-136564.c: added
	* support/regression/ports/mcs51-xstack-auto/spec.mk: added
	--std-sdcc99 to LIBSDCCFLAGS

2006-01-16 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCicode.c (geniCodeIfx): fix bug 1406131: always false
	while loop
	* support/regression/tests/bug-1406131.c: added

2005-12-31 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (decorateType): fix promotion of unary minus
	* src/SDCCsymt.c (computeType): beautified
	* src/SDCCval.c (cheapestVal): beautified, old non-Ansi version removed,